--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
-    "@osn/rich-text-editor": "^0.1.1",
+    "@osn/rich-text-editor": "^0.1.2",
     "next": "12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.16.0",
