--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "export": "next export"
   },
   "dependencies": {
-    "@osn/rich-text-editor": "^0.1.6",
+    "@osn/rich-text-editor": "0.1.7",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
+    "semantic-ui-css": "^2.4.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "eslint": "8.16.0",
