--- a/.yalc/@osn/rich-text-editor/package.json
+++ b/.yalc/@osn/rich-text-editor/package.json
@@ -37,11 +37,13 @@
     "marked": "^4.0.15",
     "prismjs": "^1.28.0",
     "quill": "^2.0.0-dev.4",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-mention": "^3.1.0",
     "sanitize-html": "^2.7.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "styled-components": "^5.3.1"
   },
-  "yalcSig": "f89c5fbf4fadf29f9031122c3cb1bea2"
+  "yalcSig": "f4e6bf62355668e9446a4317c133cd1f"
 }
