--- a/.yalc/@osn/rich-text-editor/package.json
+++ b/.yalc/@osn/rich-text-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osn/rich-text-editor",
-  "version": "0.1.15",
+  "version": "0.1.17",
   "description": "OpenSquare Team React Markdown Editor",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -33,14 +33,18 @@
   },
   "homepage": "https://github.com/opensquare-network/rich-text-editor.git#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/quill": "2",
     "github-markdown-css": "^5.1.0",
+    "lodash": "^4.17.21",
     "marked": "^4.0.15",
     "prismjs": "^1.28.0",
+    "quill": "^2.0.0-dev.4",
     "sanitize-html": "^2.7.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "styled-components": "^5.3.1"
   },
-  "yalcSig": "8876bec9ba53ff2f43634f01cb1003be"
+  "yalcSig": "e34ac82d9a8428440ad55bb9f0e13e09"
 }
