--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "export": "next export"
   },
   "dependencies": {
-    "quill": "^2.0.0-dev.4",
+    "@osn/previewer": "^0.9.1",
     "@osn/rich-text-editor": "file:.yalc/@osn/rich-text-editor",
     "next": "12.1.6",
+    "quill": "^2.0.0-dev.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "semantic-ui-css": "^2.4.1",
